ajout des metiers avancees